# agent-runner

./: .gitignore  AGENTS.md  Cargo.toml  README.md  biome.json  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.junie/skills/: webawesome
docs/: security-audit.md
docs/architecture/: provider-accounts-redesign.md
e2e/: model-panel.spec.ts  pools-dashboard.spec.ts  qa-screenshots.ts  qa-visual.mjs  screenshots.spec.ts  setup-wizard.spec.ts  style-audit.spec.ts  test-setup.mjs
e2e/fixtures/: scenarios.ts  tauri-mock.ts
scripts/: migrate-model-names.sh
src/: App.tsx  app.css  index.tsx  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: mod.rs  model.rs
src-tauri/src/diagnostics/: mod.rs
src-tauri/src/discovery/: mod.rs
src-tauri/src/executor/: mod.rs
src-tauri/src/setup/: actions.rs  agent.rs  context.rs  detection.rs  flow.rs  memory.rs  mod.rs  schemas.rs  sync.rs
src-tauri/src/state/: db.rs  mod.rs
src/__tests__/: args.test.ts  chatbox.test.tsx  grouping.test.ts  parameter-form.test.tsx  pools-view.test.tsx  setup-flow.test.tsx  setup.ts
src/balancer/: mod.rs
src/components/: ApiKeyEntry.tsx  ChatBox.tsx  CliSelector.tsx  CliStatusPanel.tsx  CommandPanel.tsx  ConfirmDialog.tsx  FormRenderer.tsx  Icon.tsx  InlineSpinner.tsx  ModelPanel.tsx  OAuthFlow.tsx  OllieSvg.tsx  ParameterForm.tsx  PoolCard.tsx  PoolSettingsPanel.tsx  ProgressBar.tsx  ResultDisplay.tsx  SetupSession.tsx  StatusBar.tsx  TagContextMenu.tsx  WizardStepper.tsx
(+15 files in other folders)
