[package]
name = "oulipoly-agent-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
serde_yml = "0.0.12"
rusqlite = { version = "0.38", features = ["bundled"] }
dirs = "6"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
